# codecrafters-claude-code-rust

./: .gitignore  Cargo.toml  README.md  codecrafters.yml  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: lib.rs  main.rs  message.rs
src/tools/: mod.rs  read_file.rs  run_bash_command.rs  write_file.rs
